--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">ExampleGoogleMaps</string>
     <string name="title_activity_maps">Map</string>
+
+    <string name="hint_origin">Origin</string>
+    <string name="hint_destination">Destination</string>
+    <string name="hint_find">Find</string>
+
+
+    <string name="my_location">My Location</string>
+
 </resources>
